--- a/test_yourself.html
+++ b/test_yourself.html
@@ -332,9 +332,10 @@
           <p>Choose one option</p>
           <input class="form-check-input" 
           type="radio" 
-          name="optradio" 
+          name="MapOneZone" 
           id="dzCheckedMapOne" 
-          value="dzCheckedMapOne">
+          value="dzCheckedMapOne"
+          checked>
           <label class="form-check-label" for="dzCheckedMapOne">
             Dilemma Zone present
           </label>
@@ -342,26 +343,31 @@
         <div class="form-check">
           <input class="form-check-input"
           type="radio" 
-          name="optradio" 
+          name="MapOneZone" 
           id="ozCheckedMapOne" 
           value="ozCheckedMapOne">
           <label class="form-check-label" for="ozCheckedMapOne">
             Option Zone present
           </label>
         </div><br>
-        <p>Input your value for the <span class="zoneTypeMapOne"></span> zone (remove any negative sign)</p>
+        <p>Input your value for the <span class="zoneTypeMapOne"></span> zone (remove any negative sign and max 2 decimal places)</p>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text" id="zoneTypeMapOne">Add from JS</span>
           </div>
           <input type="number"
-          onkeypress="return isNumberKey(event)"  
-          class="form-control" 
+          onkeypress="return isNumberKey(event)"
+          id="userInputMapOne"  
+          class="form-control"
+          step="0.01" 
           aria-label="input value for your zone">
           <small>Then click on the <em>submit</em> button below to check your answers.</small>
         </div>
-
+        <div><span id="MapOneResultOne"></span></div>
+        <div><span id="MapOneResultTwo"></span></div>
+        <div><span id="MapOneResultThree"></span></div>
         </div> <!-- End of the first modal-->
+
         <div class="modal-footer">
           <input type="submit" id="map-1-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
@@ -390,9 +396,46 @@
           <p>The vehicle is <strong><span id="map-2-carLength"></span></strong> m long</p>
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
           <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
-          <p>A dilemma zone exists that is... (length)</p>
-
+           <h4>Your answers</h4>
+        <div class="form-check">
+          <p>Choose one option</p>
+          <input class="form-check-input" 
+          type="radio" 
+          name="MapTwoZone" 
+          id="dzCheckedMapTwo" 
+          value="dzCheckedMapTwo"
+          checked>
+          <label class="form-check-label" for="dzCheckedMapTwo">
+            Dilemma Zone present
+          </label>
         </div>
+        <div class="form-check">
+          <input class="form-check-input"
+          type="radio" 
+          name="MapTwoZone" 
+          id="ozCheckedMapTwo" 
+          value="ozCheckedMapTwo">
+          <label class="form-check-label" for="ozCheckedMapTwo">
+            Option Zone present
+          </label>
+        </div><br>
+        <p>Input your value for the <span class="zoneTypeMapTwo"></span> zone (remove any negative sign and max 2 decimal places)</p>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="zoneTypeMapTwo">Add from JS</span>
+          </div>
+          <input type="number"
+          onkeypress="return isNumberKey(event)"
+          id="userInputMapTwo"  
+          class="form-control"
+          step="0.01" 
+          aria-label="input value for your zone">
+          <small>Then click on the <em>submit</em> button below to check your answers.</small>
+        </div>
+        <div><span id="MapTwoResultOne"></span></div>
+        <div><span id="MapTwoResultTwo"></span></div>
+        <div><span id="MapTwoResultThree"></span></div>
+        </div> <!-- End of second modal-->
         <div class="modal-footer">
           <input type="submit" id="map-2-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
@@ -421,9 +464,46 @@
           <p>The vehicle is <strong><span id="map-3-carLength"></span></strong> m long</p>
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
           <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
-          <p>A dilemma zone exists that is... (length)</p>
-
+          <h4>Your answers</h4>
+        <div class="form-check">
+          <p>Choose one option</p>
+          <input class="form-check-input" 
+          type="radio" 
+          name="MapThreeZone" 
+          id="dzCheckedMapThree" 
+          value="dzCheckedMapThree"
+          checked>
+          <label class="form-check-label" for="dzCheckedMapThree">
+            Dilemma Zone present
+          </label>
         </div>
+        <div class="form-check">
+          <input class="form-check-input"
+          type="radio" 
+          name="MapThreeZone" 
+          id="ozCheckedMapThree" 
+          value="ozCheckedMapThree">
+          <label class="form-check-label" for="ozCheckedMapThree">
+            Option Zone present
+          </label>
+        </div><br>
+        <p>Input your value for the <span class="zoneTypeMapThree"></span> zone (remove any negative sign and max 2 decimal places)</p>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="zoneTypeMapThree">Add from JS</span>
+          </div>
+          <input type="number"
+          onkeypress="return isNumberKey(event)"
+          id="userInputMapThree"  
+          class="form-control"
+          step="0.01" 
+          aria-label="input value for your zone">
+          <small>Then click on the <em>submit</em> button below to check your answers.</small>
+        </div>
+        <div><span id="MapThreeResultOne"></span></div>
+        <div><span id="MapThreeResultTwo"></span></div>
+        <div><span id="MapThreeResultThree"></span></div>
+        </div><!-- End of Modal three-->
         <div class="modal-footer">
           <input type="submit" id="map-3-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
@@ -452,9 +532,46 @@
           <p>The vehicle is <strong><span id="map-4-carLength"></span></strong> m long</p>
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
           <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
-          <p>A dilemma zone exists that is... (length)</p>
-
+          <h4>Your answers</h4>
+        <div class="form-check">
+          <p>Choose one option</p>
+          <input class="form-check-input" 
+          type="radio" 
+          name="MapFourZone" 
+          id="dzCheckedMapFour" 
+          value="dzCheckedMapFour"
+          checked>
+          <label class="form-check-label" for="dzCheckedMapFour">
+            Dilemma Zone present
+          </label>
         </div>
+        <div class="form-check">
+          <input class="form-check-input"
+          type="radio" 
+          name="MapFourZone" 
+          id="ozCheckedMapFour" 
+          value="ozCheckedMapFour">
+          <label class="form-check-label" for="ozCheckedMapFour">
+            Option Zone present
+          </label>
+        </div><br>
+        <p>Input your value for the <span class="zoneTypeMapFour"></span> zone (remove any negative sign and max 2 decimal places)</p>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="zoneTypeMapFour">Add from JS</span>
+          </div>
+          <input type="number"
+          onkeypress="return isNumberKey(event)"
+          id="userInputMapFour"  
+          class="form-control"
+          step="0.01" 
+          aria-label="input value for your zone">
+          <small>Then click on the <em>submit</em> button below to check your answers.</small>
+        </div>
+        <div><span id="MapFourResultOne"></span></div>
+        <div><span id="MapFourResultTwo"></span></div>
+        <div><span id="MapFourResultThree"></span></div>
+        </div> <!-- End of modal Four-->
         <div class="modal-footer">
           <input type="submit" id="map-4-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
@@ -483,9 +600,46 @@
           <p>The vehicle is <strong><span id="map-5-carLength"></span></strong> m long</p>
          <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
           <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
-          <p>A dilemma zone exists that is... (length)</p>
-
+         <h4>Your answers</h4>
+        <div class="form-check">
+          <p>Choose one option</p>
+          <input class="form-check-input" 
+          type="radio" 
+          name="MapFiveZone" 
+          id="dzCheckedMapFive" 
+          value="dzCheckedMapFive"
+          checked>
+          <label class="form-check-label" for="dzCheckedMapFive">
+            Dilemma Zone present
+          </label>
         </div>
+        <div class="form-check">
+          <input class="form-check-input"
+          type="radio" 
+          name="MapFiveZone" 
+          id="ozCheckedMapFive" 
+          value="ozCheckedMapFive">
+          <label class="form-check-label" for="ozCheckedMapFive">
+            Option Zone present
+          </label>
+        </div><br>
+        <p>Input your value for the <span class="zoneTypeMapFive"></span> zone (remove any negative sign and max 2 decimal places)</p>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="zoneTypeMapFive">Add from JS</span>
+          </div>
+          <input type="number"
+          onkeypress="return isNumberKey(event)"
+          id="userInputMapFive"  
+          class="form-control"
+          step="0.01" 
+          aria-label="input value for your zone">
+          <small>Then click on the <em>submit</em> button below to check your answers.</small>
+        </div>
+        <div><span id="MapFiveResultOne"></span></div>
+        <div><span id="MapFiveResultTwo"></span></div>
+        <div><span id="MapFiveResultThree"></span></div>
+        </div> <!-- End of modal five-->
         <div class="modal-footer">
           <input type="submit" id="map-5-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
