Fix typeset bold for user calculations on test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -92,9 +92,9 @@
     </div>
     <div class="row mb--1">
       <div class="col-lg-4 content-div">
-        <div class="card shadow">
+        <div class="card shadow" id="card-map-1">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-map-1">
+          <div class="card-body">
             <h5 class="card-title">Scenario One <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
             <p>Determine the size of the intersection using the Google Map link provided. Then click on the <i class="fas fa-car-battery"></i> <em>scene</em>
               button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
@@ -130,9 +130,9 @@
     </div>
     <div class="row mb--1">
       <div class="col-lg-4 content-div">
-        <div class="card shadow">
+        <div class="card shadow" id="card-map-2">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-map-2">
+          <div class="card-body" >
             <h5 class="card-title">Scenario Two <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
             <p>Determine the size of the intersection using the Google Map link provided. Then click on the <i class="fas fa-car-battery"></i> <em>scene</em>
               button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
@@ -168,9 +168,9 @@
     </div>
     <div class="row mb--1">
       <div class="col-lg-4 content-div">
-        <div class="card shadow">
+        <div class="card shadow" id="card-map-3">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-map-3">
+          <div class="card-body">
             <h5 class="card-title">Scenario Three <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
             <p>Determine the size of the intersection using the Google Map link provided. Then click on the <i class="fas fa-car-battery"></i> <em>scene</em>
               button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
@@ -206,9 +206,9 @@
     </div>
     <div class="row mb--1">
       <div class="col-lg-4 content-div">
-        <div class="card shadow">
+        <div class="card shadow" id="card-map-4">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-map-4">
+          <div class="card-body">
             <h5 class="card-title">Scenario Four <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
             <p>Determine the size of the intersection using the Google Map link provided. Then click on the <i class="fas fa-car-battery"></i> <em>scene</em>
               button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
@@ -244,9 +244,9 @@
     </div>
     <div class="row">
       <div class="col-lg-4 content-div">
-        <div class="card shadow">
+        <div class="card shadow" id="card-map-5">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
-          <div class="card-body" id="card-map-5">
+          <div class="card-body" >
             <h5 class="card-title">Scenario Five <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
             <p>Determine the size of the intersection using the Google Map link provided. Then click on the <i class="fas fa-car-battery"></i> <em>scene</em>
               button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
