Add user ability to get a perfect score in test_yourself.html

--- a/help.html
+++ b/help.html
@@ -124,7 +124,7 @@
         <div class="card shadow" id="card-help-red">
           <img class="card-img-top img-fluid" src="assets/images/card-images/red.png" alt="Red Light Image">
           <div class="card-body">
-            <h5 class="card-title">Interhase</h5>
+            <h5 class="card-title">Interphase</h5>
           </div>
         </div>
       </div>
