Fix user input to allow up to 2 decimals and no non-numbers at test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -311,7 +311,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">Your calculation</span>
             </div>
-            <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return isNumberKey(this, 2)" id="userInputMapOne" class="form-control" min="0" step="0.01" aria-label="input value for your zone">
+            <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapOne" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone">
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
           <div><span id="MapOneResultOne"></span></div>
@@ -366,7 +366,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">Your calculation</span>
             </div>
-            <input type="number" onkeypress="return isNumberKey(event)" id="userInputMapTwo" class="form-control" min="0" step="0.01" aria-label="input value for your zone">
+            <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapTwo" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone">
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
           <div><span id="MapTwoResultOne"></span></div>
@@ -420,7 +420,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">Your calculation</span>
             </div>
-            <input type="number" onkeypress="return isNumberKey(event)" id="userInputMapThree" class="form-control" mind="0" step="0.01" aria-label="input value for your zone">
+            <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapThree" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone">
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
           <div><span id="MapThreeResultOne"></span></div>
@@ -474,7 +474,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">Your calculation</span>
             </div>
-            <input type="number" onkeypress="return isNumberKey(event)" id="userInputMapFour" class="form-control" min="0" step="0.01" aria-label="input value for your zone">
+            <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapFour" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone">
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
           <div><span id="MapFourResultOne"></span></div>
@@ -528,7 +528,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">Your Calculation</span>
             </div>
-            <input type="number" onkeypress="return isNumberKey(event)" id="userInputMapFive" class="form-control" min="0" step="0.01" aria-label="input value for your zone">
+            <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapFive" class="form-control" min="0" step="0.01" aria-label="input value for your zone">
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
           <div><span id="MapFiveResultOne"></span></div>
