--- a/test_yourself.html
+++ b/test_yourself.html
@@ -59,6 +59,7 @@
             scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button
             <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using
             our <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
+            <p class="head-text">For help on the coeffecient of friction click here: <button type="button" class="btn btn-link" data-toggle="modal" data-target="#frictionHelp"><i class="far fa-question-circle"></i></button></p>
           <p class="head-text">For instructions on how to measure distances across the intersection using Google Maps choose one of the following:</p>
           <div class="d-flex">
             <ul class="list-group list-group-horizontal mx-auto justify-content-center flex-column flex-md-row background-ul">
@@ -77,7 +78,110 @@
       </div>
     </div>
   </section>
-
+<!-- Friction help modal -->
+<div class="modal fade" id="frictionHelp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Coeffecient of friction list</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       Table 1: A list of common coeffecient of friction numbers
+       <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Tire Conditions</th>
+      <th scope="col">Weather Conditions</th>
+      <th scope="col">μ</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Good</td>
+      <td>Dry</td>
+      <td>0.9</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Good</td>
+      <td>Wet</td>
+      <td>0.6 - 0.7</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Good</td>
+      <td>Snowy</td>
+      <td>0.4 - 0.5</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>Good</td>
+      <td>Icy</td>
+      <td>0.1 - 0.3</td>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>Average</td>
+      <td>Dry</td>
+      <td>0.8</td>
+    </tr>
+    <tr>
+      <th scope="row">6</th>
+      <td>Average</td>
+      <td>Wet</td>
+      <td>0.5 - 0.6</td>
+    </tr>
+    <tr>
+      <th scope="row">7</th>
+      <td>Average</td>
+      <td>Snowy</td>
+      <td>0.2 - 0.3</td>
+    </tr>
+    <tr>
+      <th scope="row">8</th>
+      <td>Average</td>
+      <td>Icy</td>
+      <td>0.1 - 0.2</td>
+    </tr>
+    <tr>
+      <th scope="row">9</th>
+      <td>Bad</td>
+      <td>Dry</td>
+      <td>0.7</td>
+    </tr>
+    <tr>
+      <th scope="row">10</th>
+      <td>Bad</td>
+      <td>Wet</td>
+      <td>0.4 - 0.5</td>
+    </tr>
+    <tr>
+      <th scope="row">11</th>
+      <td>Bad</td>
+      <td>Snowy</td>
+      <td>0.3</td>
+    </tr>
+    <tr>
+      <th scope="row">12</th>
+      <td>Bad</td>
+      <td>Icy</td>
+      <td>0.1</td>
+    </tr>
+  </tbody>
+</table>
+<small>Some estimation is required for the calculation of μ which may lead to slightly altered results comparing to our calculator. This is because the calculation includes some randomness to account for realistic scenarios.</small>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
+    </div>
+    </div>
+  </div>
+</div>
   <!-- Map One-->
   <section class="container">
     <div class="row">
@@ -273,6 +377,7 @@
 
   <!-- Modals for Scenarios -->
   <!-- Map One-->
+  
   <div class="modal fade" id="map-1-scene-1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -307,7 +412,7 @@
             </label>
           </div><br>
           <p>Input your value for the zone (remove any negative sign and max 2 decimal places)</p>
-          <div class="input-group mb-3">
+           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text">Your calculation</span>
             </div>
@@ -318,11 +423,10 @@
           <div><span id="MapOneResultTwo"></span></div>
           <div><span id="MapOneResultThree"></span></div>
         </div> <!-- End of the first modal-->
-
         <div class="modal-footer">
-          <input type="submit" id="map-1-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+           <input type="submit" id="map-1-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
-         </div>
+          </div>
       </div>
     </div>
   </div>
@@ -542,7 +646,7 @@
       </div>
     </div>
   </div>
-
+  
   <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
@@ -605,6 +709,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/maps.js"></script>
+  <script src="assets/scripts/dependencies.js"></script>
   <script src="assets/scripts/test_yourself.js"></script>
   <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWKHz27Q-E_mW5wHULLj6Wgap3VOjrCbs&callback=initMap"></script>
